src/index.css
@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


:root {
    --primaryFont: 'Montserrat';
    --secondaryFont: 'Exo 2';
    --limeGreenColor: #8ffd2a;
    --purpleColor: #982afd;
    --backgroundColor: rgb(33, 31, 34) !important;
}

body {
    margin: 0;
    font-family: var(--primaryFont), -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
        sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    /* background-color: var(--backgroundColor); */
    background-image: url('./assets/images/Background.jpg');
}

.ff-secondary {
    font-family: var(--secondaryFont);
}

.c-purple {
    color: var(--purpleColor);
}

.wrapper {
    display: flex;
    flex-direction: column;
    row-gap: 20px;
    margin-left: 7%;
    margin-right: 7%;
}

.heading {
    color: white;
    font-size: 40px;
    text-align: center;
    margin-top: 50px;
    margin-bottom: 60px;
}

button {
    border-radius: 50px;
    width: 200px;
    background-color: var(--limeGreenColor);
    color: black;
    padding: 15px 20px 15px 20px;
    font-weight: 600;
    text-align: center;
    font-family: var(--primaryFont);
    border: none;
    cursor: pointer;
    text-transform: uppercase;
}

/* Navbar */
.navbar {
    background-color: var(--backgroundColor);
    color: #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: var(--primaryFont);
    padding-left: 5%;
    padding-right: 5%;
    margin-top: 10px;
}

.navbar-brand {
    display: flex;
    align-items: center;
    column-gap: 10px;
}

.navbar .toggle-btn{
    color:#fff;
    font-size: 1.5rem;
    cursor: pointer;
    display: none;
}

.navbar-brand > .title {
    font-size: 1.4rem;
    font-family: var(--secondaryFont);
}
  
.navbar-items {
    list-style: none;
    display: flex;
    text-transform: uppercase;
    align-items: center;
}

.navbar-items > li {
    margin-left: 1.4rem;
    cursor: pointer!important;
}

.navbar-items li:first-child {
    margin-left: 0;
}

.navbar-items li:last-child {
    border-radius: 50px;
    width: 100px;
    background-color: var(--limeGreenColor);
    color: black;
    padding: 12px 20px 12px 20px;
    font-weight: 600;
    text-align: center;
}

/* HERO */

.hero-image {
    display: flex;
    justify-content: center;
    margin: 20px;
}

.hero-image > img {
    width: 100%;
    object-fit:contain;
    height: 500px;
}

/* Overlay styles */
.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    padding-left: 200px;
}

/* Optionally, you can style the text */
.overlay h1 {

    text-transform: uppercase;
    font-family: var(--secondaryFont);
    text-align: start;
}

/* get-to-know-us */
.get-to-know-us {
    display: flex;
    align-items: center;
    justify-content: center;
    column-gap: 50px;
    margin: 20px;
    margin-top: 35px;
}
  
.get-to-know-us > .first-div {
    display: flex;
    flex-direction: column;
    width: 100%;
    row-gap: 20px;
}

.get-to-know-us-text { 
    color: white;
    text-rendering: geometricPrecision;
    line-height: 20px;
    word-spacing: 1px;
}

.get-to-know-us > div > h1 {
    margin-bottom: 10px;
    margin-top: 10px;
    text-transform: uppercase;
    font-size: 46px;
    font-family: var(--secondaryFont);
    text-align: left;
}

.get-to-know-us > div > img {
    height: 420px;
    border-radius: 30px;
}


/* Stats */
.stats {
    display: flex;
    justify-content: center;
    text-transform: uppercase;
    font-size: 25px;
    font-weight: 600;
    column-gap: 50px;
    border-radius: 30px;
    border: 1px solid var(--limeGreenColor);
    padding: 14px;
    color: white;
    margin-top: 25px;
    margin-left: 20px;
    margin-right: 20px;
}

.stats > div > span {
    margin-right: 20px;
}

/* Services */
.services {
    display: flex;
    column-gap: 30px;
    row-gap: 20px;
    flex-wrap: wrap;
    font-size: 32px;
    font-weight: 700;
    font-family: var(--secondaryFont);
    color: var(--limeGreenColor);
    justify-content: center;
}

.outer-shadow-box {
    height: 174px;
    border: 2px solid var(--purpleColor);
    border-radius: 30px;
    background-color: black;
}


.service {
    display: flex;
    align-items: center;
    padding-left: 20px;
    padding-right: 20px;
    height: 150px;
    width: 230px;
    border: 2px solid var(--purpleColor);
    border-radius: 30px;
    background-color: var(--backgroundColor);
}


/* Footer */
footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
    padding-top: 35px;
    padding-bottom: 35px;
    background-color: black;
    row-gap: 5px;
    margin-top: 40px;
}

.get-in-touch {
    color: var(--limeGreenColor);
    font-family: var(--secondaryFont);
    font-size: 35px;
}

footer > .email {
    font-size: 45px;
    font-weight: 600;
    margin-bottom: 30px;
}

footer > .copyright {
    font-size: 20px;
}

footer > .contact-info {
    display: flex;
    align-items: center;
    margin-top: 20px;
    margin-bottom: 20px;
    column-gap: 40px;
}

/* Team */
.team { 
    display: flex;
    flex-wrap: wrap;
    column-gap: 15px;
    row-gap: 15px;
    justify-content: center;
}

.team-card {
    position: relative;
    height: 280px;
    width: 235px;
}

.team-card > .circle {
    position: absolute;
    right: 0;
    top: -10px;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background-color: var(--limeGreenColor);
}

.team-member {
    background-color:var(--purpleColor);
    width: 100%;
    height: 100%;
    border-radius: 30px;
    overflow: hidden;
}

.team-member > img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.swiper {
width: 100%;
padding-top: 50px;
padding-bottom: 50px;
}

.swiper-slide {
background-position: center;
background-size: cover;
background-color: black;
width: 90% !important;
height: 370px !important;
display: flex !important;
border-radius: 25px;
padding-left: 5%;
overflow: hidden;
}

.swiper-slide img {
display: block;
position: relative;
}
.swiper-slide p{
    color:white;
    margin:0px
}

.swiper-slide h1{
    width: 50%;
    color:var(--limeGreenColor);
}

.swiper-slide h3{
    color:white;
}

.swiper-slide div{
    padding-left: 10px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.dropdown-menu{
    display: none;
    position: absolute;
    top: 65px;
    width: 100%;
    text-transform: uppercase;
    color: white;
    background-color: rgba(255,255,255, 0.1);
    backdrop-filter: blur(15px);
    border-radius: 10px;
    overflow: hidden;
    height: 0px;
    /* transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
}

.dropdown-menu li{
    padding: 0.7rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.dropdown-menu.open{
    height: 240px;
}

.dropdown-menu li:last-child {
    border-radius: 50px;
    background-color: var(--limeGreenColor);
    color: black;
    padding: 12px 20px 12px 20px;
    font-weight: 600;
    text-align: center;
}

/* Responsive Design */
@media(max-width: 992px) {
    .navbar-items{
        display: none;
    }

    .navbar .toggle-btn{
        display: block;
    }

    .dropdown-menu{
        display: block;
    }

    .service{
        display: flex;
        justify-content: center;
    }

    footer > .email {
        font-size: 30px;
    }

    .get-to-know-us > div > img{
        display: none
    }

    .get-to-know-us{    
        column-gap: 0px;
    }

    .get-in-touch{
        font-size: 25px;
    }
}

@media (max-width:450px) {
    .team-card{
        height: 250px;
        margin-top: 10px ;
    }

    .outer-shadow-box{
        height: 120px;
    }
    .service{
        font-size: large;
        width: 180px;
        height: 100px;
    }

    .get-to-know-us > .first-div{
        width: 90%;
    }

    footer > .email {
        font-size: 15px;
    }

    footer > .contact-info {
        font-size: 15px;
    }

    .get-to-know-us-text{
        overflow: hidden;
        text-overflow: ellipsis;
        height: 300px; 
        display: -webkit-box;
        -webkit-line-clamp: 15; 
        -webkit-box-orient: vertical;
    }

    .heading{
        margin-top:10px;
        margin-bottom: 40px;
    }

    .swiper-slide img{
        display:none
    }
}

.container {
    margin-top: 5%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
}
  
.box {
    width: 400px;
    height: 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-weight: bold;
    font-size: 20px;
    color:white;
    border: 2px solid var(--limeGreenColor);
    border-radius: 20px;
    padding-left:2px;
    padding-right: 2px;
}
  
.line {
    width: 12%;
    height: 5px;
    background-image: linear-gradient(to right,var(--purpleColor), var(--limeGreenColor));
    margin: 0 20px;
  }
  
  /* Responsive styles for mobile view */
  @media (max-width: 767px) {
    .container {
        flex-direction: column;
    }

    .box{
        width: 300px;
    }
    
    .line {
        margin: 20px 0;
        transform: rotate(90deg); /* Rotate the line vertically */
        transform-origin: center; /* Rotate around its center */
        background-image: linear-gradient(to right, var(--purpleColor), var(--limeGreenColor));
        margin-top: 30px;
        margin-bottom: 30px;
    }

    .overlay-text {
        width: 80%;
      }
  }
  

